css/_display.css
/*

DISPLAY


*/

@mixin prefixes {
&block { display: block; }
&inline-block { display: inline-block; }
&inline { display: inline; }

&table { display: table; }
&table-cell {display: table-cell;}
}

blockquote {
	margin: 2em 0 2em 0;
	padding-left: 2em;
	border-left: 8px solid var(--black10);
}

.highlight {
    padding: 2em;
}

pre {
	border-left: 8px solid var(--black10);
	white-space: pre
}

.middle { vertical-align: middle; }

.ulnone { list-style: none; margin: 0; padding: 0;}

.vh100 { height: 100vh; }
.h100 { height: 100%; }
.minh100 { min-height: 100%; }

